Fixed description for removing and truncating lists and maps

--- a/src/app/uiComponents/lists/css/listGrid.module.css
+++ b/src/app/uiComponents/lists/css/listGrid.module.css
@@ -10,18 +10,18 @@
 }
 
 .sectionDescription {
-    width: 100%;
+    width: 90%;
     display: flex;
     justify-content: flex-start;
     align-content: center;
     align-items: center;
+    margin: 1rem 1rem 2rem 1rem;
     gap: 1rem;
 
     font-size: 0.9em;
     color: var(--mantine-color-gray-6);
     line-height: 1.4rem;
 
-    margin-bottom: 2rem;
 
     background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-gray-9));
     padding: 1rem 1rem 1rem 0.5rem;
